Huge refactoring - enable OAuth2 scope checking over all end points
